finished data search in inventories